--- a/digitaloxford/scss/custom/_variables.scss
+++ b/digitaloxford/scss/custom/_variables.scss
@@ -8,7 +8,7 @@ $messages-success-bg: #DFF2BF;
 $messages-success-color: #4F8A10;
 $messages-warning-bg: #FEEFB3;
 $messages-warning-color: #9F6000;
-$messages-error-bg: #FFBABA;
+$messages-error-bg: #ffe5e5;
 $messages-error-color: #D8000C;
 
 // Digital Oxford
